# target-constrafor

./: pyproject.toml
samples_payloads/: contract.singer  project.singer  subcontractor.singer
target_constrafor/: auth.py  sinks.py  target.py
